# calamp-rs

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO  rustfmt.toml
.github/workflows/: rust.yml
benches/: msg_benchmark.rs
examples/: cli_udp.rs  simple.rs  srv_udp.rs
src/: acknowledge_message.rs  application_message.rs  lib.rs  message_header.rs  message_type.rs  options_header.rs  service_type.rs  utils.rs
src/messages/: event_report.rs  mod.rs
