[package]
name = "calamp-rs"
version = "0.0.3"
authors = ["msi <mbsd@m0x.ru>"]
edition = "2018"
include = [
  "LICENSE*",
  ".gitignore",
  "Cargo.toml",
  "benches/*.rs",
  "src/**/*",
  "tests/*.rs",
]
license = "MIT"
keywords = ["protocol","parser","nom"]
homepage = "https://github.com/murilobsd/calamp-rs"
repository = "https://github.com/murilobsd/calamp-rs.git"
documentation = "https://docs.rs/calamp-rs"
categories = ["network-programming", "parser-implementations"]
readme = "README.md"
description = "Parser for the Calamp LMDirect message protocol"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.2.0"
chrono = { version = "0.4.19", optional = true }
log = "0.4.14"

[dev-dependencies]
approx = "0.5.0"
criterion = "0.3.4"

[[bench]]
name = "msg_benchmark"
harness = false
