[package]
name = "calamp-rs"
version = "0.2.4"
authors = ["msi <mbsd@m0x.ru>"]
edition = "2018"
include = [
  "LICENSE*",
  ".gitignore",
  "Cargo.toml",
  "benches/*.rs",
  "examples/*.rs",
  "src/**/*",
  "tests/*.rs",
]
license = "BSD-2-Clause"
keywords = ["protocol","parser","nom"]
homepage = "https://git.sr.ht/~mbsd/calamp-rs"
repository = "https://git.sr.ht/~mbsd/calamp-rs"
documentation = "https://docs.rs/calamp-rs"
categories = ["network-programming", "parser-implementations"]
readme = "README.md"
description = "Parser for the Calamp LMDirect message protocol"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.0"
chrono = { version = "0.4.19", optional = true, features = ["serde"] }
serde = { version = "1.0.126", optional = true, features = ["derive"] }
log = { version = "0.4.14", optional = true }

[dev-dependencies]
approx = "0.5.0"
criterion = "0.5.0"

[[bench]]
name = "msg_benchmark"
harness = false
